<resources>
    <string name="app_name">Observe</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="cusvita_observe">Cusvita Observe</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="warning">Warning</string>
    <string name="last_motion_detected">Last motion detected</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_account">Edit Account</string>
    <string name="settings">Settings</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="current_email_address">Current email address</string>
    <string name="new_email_address">New email address</string>
    <string name="save">Save</string>
    <string name="am">AM</string>
    <string name="am_not_checked_end_time">AM, Not checked, End time</string>
    <string name="am_not_checked_start_time">AM, Not checked, Start time</string>
    <string name="pm_not_checked_start_time">PM, Not checked, Start time</string>
    <string name="pm">PM</string>
    <string name="colon">:</string>
    <string name="minutes">Minutes</string>
    <string name="start_time">Start Time</string>
    <string name="hours">Hours</string>
    <string name="end_time">End Time</string>
    <string name="pm_not_checked_end_time">PM, Not checked, End time</string>
    <string name="set_time_description">Schedule the exception of the depending on the usual sleep schedule of the elderly. \n\nIt is recommended to set the End time a bit earlier than the usual wake up time.</string>
    <string name="set_time">Set Time</string>
    <string name="set">Set</string>
    <string name="set_exception">Set Exception</string>
    <string name="exceptions">Exceptions</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="about_service_description">Cusvita Observe provides non intrusive solutions to those who can\'t stay with their independently living loved ones.</string>
    <string name="about_service">About Service</string>
    <string name="main">Main</string>
    <string name="account">Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_period">Enter Period</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password_no_cap">Confirm password</string>
    <string name="am_end_time">AM end time</string>
    <string name="pm_end_time">PM end time</string>
    <string name="pm_start_time">PM start time</string>
    <string name="am_start_time">AM start time</string>
</resources>