<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings_page">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/watermark_background"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/account"
        android:textColor="#808080"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_exception_button"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/set_exception_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/set_exception"
        app:layout_constraintEnd_toEndOf="@+id/set_time_button"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/set_time_button"
        app:layout_constraintTop_toBottomOf="@+id/set_time_button"
        app:srcCompat="@drawable/set_exception_button"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/set_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/set_time"
        app:layout_constraintEnd_toEndOf="@+id/settings"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/settings"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:srcCompat="@drawable/set_time_button"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/edit_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit_profile"
        app:layout_constraintBottom_toTopOf="@+id/change_password_button"
        app:layout_constraintEnd_toEndOf="@+id/account"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/account"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:srcCompat="@drawable/edit_profile_button"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/change_password"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_button"
        app:srcCompat="@drawable/change_password_button"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/notifications_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/notifications"
        app:layout_constraintEnd_toEndOf="@+id/change_password_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/change_password_button"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:srcCompat="@drawable/notifications_button"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/about_service_description"
        android:layout_width="307dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/about_service_description"
        android:textAlignment="center"
        android:textColor="#414042"
        app:layout_constraintEnd_toEndOf="@+id/about_service"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/about_service"
        app:layout_constraintTop_toBottomOf="@+id/about_service" />

    <ImageView
        android:id="@+id/information_icon"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:layout_marginTop="60dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="@+id/notifications_button"
        app:layout_constraintStart_toStartOf="@+id/notifications_button"
        app:layout_constraintTop_toBottomOf="@+id/notifications_button"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/about_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/about_service"
        android:textColor="#808080"
        app:layout_constraintEnd_toEndOf="@+id/information_icon"
        app:layout_constraintStart_toStartOf="@+id/information_icon"
        app:layout_constraintTop_toBottomOf="@+id/information_icon"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/settings"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/settings_icon"
        app:layout_constraintStart_toStartOf="@+id/settings_icon"
        app:layout_constraintTop_toBottomOf="@+id/settings_icon" />

    <ImageButton
        android:id="@+id/back_button2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/email3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/main"
        android:textColor="#414042"
        app:layout_constraintBottom_toBottomOf="@+id/back_button2"
        app:layout_constraintStart_toEndOf="@+id/back_button2"
        app:layout_constraintTop_toTopOf="@+id/back_button2" />

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <View
        android:id="@+id/view2"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/notifications_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button" />

    <View
        android:id="@+id/view3"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="17dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="372dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="402dp" />

</androidx.constraintlayout.widget.ConstraintLayout>