<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".exceptions_page">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/watermark_background" />

    <EditText
        android:id="@+id/set_time_input_hour2"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:includeFontPadding="false"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="92sp"
        app:layout_constraintBottom_toBottomOf="@+id/set_time_input_minute2"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/set_time_input_minute2"
        app:layout_constraintVertical_bias="0.0"
        tools:text="12"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald"
        android:includeFontPadding="false"
        android:text="@string/colon"
        android:textColor="@android:color/black"
        android:textSize="98sp"
        app:layout_constraintBottom_toBottomOf="@+id/set_time_input_minute3"
        app:layout_constraintEnd_toStartOf="@+id/set_time_input_minute3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/set_time_input_hour3" />

    <EditText
        android:id="@+id/set_time_input_minute3"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:includeFontPadding="false"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="92sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup_start_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/set_time_description"
        tools:text="30" />

   <TextView
       android:id="@+id/minute_end_time"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="-10dp"
       android:text="@string/minutes"
       android:textColor="#808080"
       android:textSize="12sp"
       app:layout_constraintEnd_toEndOf="@+id/set_time_input_minute2"
       app:layout_constraintStart_toStartOf="@+id/set_time_input_minute2"
       app:layout_constraintTop_toBottomOf="@+id/set_time_input_minute2"
       tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/set_time_input_minute2"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:includeFontPadding="false"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"

        android:textSize="92sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/set_time_input_minute3"
        tools:text="30" />

    <TextView
        android:id="@+id/minutes_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/minutes"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/set_time_input_minute3"
        app:layout_constraintStart_toStartOf="@+id/set_time_input_minute3"
        app:layout_constraintTop_toBottomOf="@+id/set_time_input_minute3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/start_time"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/set_time_input_minute3" />

   <TextView
       android:id="@+id/hours_end_time"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="-10dp"
       android:text="@string/hours"
       android:textColor="#808080"
       android:textSize="12sp"
       app:layout_constraintEnd_toEndOf="@+id/set_time_input_hour2"
       app:layout_constraintHorizontal_bias="0.511"
       app:layout_constraintStart_toStartOf="@+id/set_time_input_hour2"
       app:layout_constraintTop_toBottomOf="@+id/set_time_input_hour2"
       tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/set_time_input_hour3"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/oswald"
        android:includeFontPadding="false"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="92sp"
        app:layout_constraintBottom_toBottomOf="@+id/set_time_input_minute3"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/set_time_input_minute3"
        app:layout_constraintVertical_bias="1.0"
        tools:text="3" />

    <TextView
        android:id="@+id/hours_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/hours"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/set_time_input_hour3"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/set_time_input_hour3"
        app:layout_constraintTop_toBottomOf="@+id/set_time_input_hour3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/end_time"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/set_time_input_minute2" />

    <RadioGroup
        android:id="@+id/radioGroup_start_time"
        android:layout_width="61dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/set_time_input_minute3"
        app:layout_constraintEnd_toStartOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/set_time_input_minute3"
        app:layout_constraintTop_toTopOf="@+id/set_time_input_minute3"
        app:layout_constraintVertical_bias="0.74">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/am_pm_selector"
            android:button="@android:color/transparent"
            android:contentDescription="@string/am_start_time"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:text="@string/am"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup"
            tools:ignore="TextContrastCheck,RedundantDescriptionCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/am_pm_selector"
            android:button="@android:color/transparent"
            android:contentDescription="@string/pm_start_time"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:text="@string/pm"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioButton_AM"
            app:layout_constraintTop_toBottomOf="@+id/radioButton_AM"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="61dp"
        android:layout_height="110dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/set_time_input_minute2"
        app:layout_constraintEnd_toStartOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/set_time_input_minute2"
        app:layout_constraintTop_toTopOf="@+id/set_time_input_minute2"
        app:layout_constraintVertical_bias="0.481">

        <RadioButton
            android:id="@+id/radioButton_AM"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/am_pm_selector"
            android:button="@android:color/transparent"
            android:contentDescription="@string/am_end_time"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:text="@string/am"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioButton_PM"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/am_pm_selector"
            android:button="@android:color/transparent"
            android:contentDescription="@string/pm_end_time"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:text="@string/pm"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioButton_AM"
            app:layout_constraintTop_toBottomOf="@+id/radioButton_AM"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald"
        android:includeFontPadding="false"
        android:text="@string/colon"
        android:textColor="@android:color/black"
        android:textSize="98sp"
        app:layout_constraintBottom_toBottomOf="@+id/set_time_input_minute2"
        app:layout_constraintEnd_toStartOf="@+id/set_time_input_minute2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/set_time_input_hour2" />

   <TextView
       android:id="@+id/set_time_description"
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="24dp"
       android:text="@string/set_time_description"
       android:textColor="#808080"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.504"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/set_time2"
       tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/set_time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/set_exception"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exceptions_icon" />

    <ImageView
        android:id="@+id/exceptions_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/exceptions_icon" />

    <ImageButton
        android:id="@+id/exception_set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/set"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/set_button"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>